<resources>
    <string name="app_name">Chat Up</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_up">Chat Up</string>
    <string name="create_a_story">Create a story</string>
    <string name="mohamadinus_bagwan">Mohamadinus Bagwan</string>
    <string name="android_developer">Android Developer</string>
    <string name="todo">TODO</string>
    <string name="todo0">TODO0</string>
    <string name="notifications">Notifications</string>
</resources>