<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/chat_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_20font_mdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile"
                app:layout_constraintVertical_bias="0.347" />

            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/profile"
                android:layout_width="@dimen/_50mdp"
                android:layout_height="@dimen/_50mdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:padding="@dimen/_6mdp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/blue77"
                app:layout_constraintBottom_toBottomOf="@+id/profile"
                app:layout_constraintEnd_toEndOf="@+id/profile"
                app:layout_constraintStart_toStartOf="@+id/profile"
                app:layout_constraintTop_toTopOf="@+id/profile"
                app:layout_constraintVertical_bias="0.458" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#8F8A8A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/profileImage"
                            android:layout_width="@dimen/_130mdp"
                            android:layout_height="@dimen/_85mdp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="@dimen/_6mdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/photo2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:riv_border_color="#333333"
                            app:riv_border_width="2dip"
                            app:riv_corner_radius="10dip"
                            app:riv_mutate_background="true" />

                        <View
                            android:id="@+id/view4"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                            app:layout_constraintEnd_toEndOf="@+id/profileImage"
                            app:layout_constraintStart_toStartOf="@+id/profileImage"
                            app:layout_constraintTop_toTopOf="@+id/profileImage" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_a_story"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_17mdp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@+id/imageView2"
                            app:layout_constraintStart_toStartOf="@+id/imageView2"
                            app:layout_constraintTop_toBottomOf="@+id/view5" />

                        <View
                            android:id="@+id/view5"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/white2"
                            app:layout_constraintBottom_toBottomOf="@id/imageView2"
                            app:layout_constraintEnd_toEndOf="@+id/imageView2"
                            app:layout_constraintStart_toStartOf="@id/imageView2"
                            app:layout_constraintTop_toTopOf="@+id/imageView2" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="@dimen/_30mdp"
                            android:layout_height="@dimen/_30mdp"
                            android:src="@drawable/ic_baseline_add_circle_24"
                            app:layout_constraintBottom_toBottomOf="@id/profileImage"
                            app:layout_constraintEnd_toEndOf="@id/profileImage"
                            app:layout_constraintHorizontal_bias="0.503"
                            app:layout_constraintStart_toStartOf="@+id/profileImage"
                            app:layout_constraintTop_toTopOf="@+id/profileImage"
                            app:layout_constraintVertical_bias="0.3"
                            android:contentDescription="@string/todo0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/storyRV"
                        android:layout_width="710dp"
                        android:layout_marginTop="@dimen/_6mdp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_16mdp"
                        android:orientation="horizontal" />

                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_6mdp"
                android:background="#8F8A8A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboard"
                android:layout_width="match_parent"
                android:layout_height="1500dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>