<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/profileLayout"
    android:layout_height="match_parent"
    android:background="@drawable/ic_addfriend"
    tools:context=".model.ProfileFragment"
    tools:ignore="NamespaceTypo">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toTopOf="parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210mdp"
            android:elevation="@dimen/_30mdp"
            diagonal:diagonal_angle="13"
            diagonal:diagonal_direction="left"
            diagonal:diagonal_position="bottom"
            tools:ignore="MissingClass">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_315mdp"
                android:layout_height="@dimen/_275mdp"
                android:scaleType="centerCrop"
                android:src="@drawable/photo2" />

            <View
                android:id="@+id/Frien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </com.github.florent37.diagonallayout.DiagonalLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/_90mdp"
        android:layout_height="@dimen/_90mdp"
        android:padding="@dimen/_6mdp"
        android:src="@drawable/photo2"
        diagonal:civ_border_color="@color/white"
        diagonal:civ_border_width="4dp"
        diagonal:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintStart_toStartOf="@+id/linearLayout"
        diagonal:layout_constraintTop_toTopOf="@+id/linearLayout"
        diagonal:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="@dimen/_25mdp"
        android:layout_height="@dimen/_25mdp"
        android:id="@+id/coverPhoto"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/image2"
        diagonal:fabCustomSize="@dimen/_25mdp"
        diagonal:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        diagonal:layout_constraintEnd_toEndOf="@+id/linearLayout"
        diagonal:maxImageSize="@dimen/_40mdp"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPhoto"
        android:layout_width="@dimen/_16mdp"
        android:layout_height="@dimen/_16mdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/image2"
        diagonal:fabCustomSize="@dimen/_16mdp"
        diagonal:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        diagonal:layout_constraintEnd_toEndOf="@+id/profile"
        diagonal:layout_constraintHorizontal_bias="0.85"
        diagonal:layout_constraintStart_toStartOf="@+id/profile"
        diagonal:layout_constraintTop_toTopOf="@+id/profile"
        diagonal:layout_constraintVertical_bias="0.84000003"
        diagonal:maxImageSize="@dimen/_27mdp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4font_mdp"
        android:fontFamily="@font/baloo"
        android:text="@string/mohamadinus_bagwan"
        android:textColor="@color/black"
        android:textSize="@dimen/_16font_mdp"
        diagonal:layout_constraintEnd_toEndOf="@+id/profile"
        diagonal:layout_constraintStart_toStartOf="@+id/profile"
        diagonal:layout_constraintTop_toBottomOf="@+id/profile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_developer"
        android:textSize="@dimen/_14font_mdp"
        diagonal:layout_constraintEnd_toEndOf="@+id/textView2"
        diagonal:layout_constraintStart_toStartOf="@+id/textView2"
        diagonal:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/Friend"
        android:layout_width="@dimen/_35mdp"
        android:layout_height="@dimen/_35mdp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_4"
        diagonal:layout_constraintEnd_toStartOf="@+id/call"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintHorizontal_chainStyle="spread"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/addfriend2"
        android:layout_width="@dimen/_23mdp"
        android:layout_height="@dimen/_23mdp"
        android:background="@drawable/ic_addfriend"
        diagonal:layout_constraintBottom_toBottomOf="@+id/Friend"
        diagonal:layout_constraintEnd_toEndOf="@+id/Friend"
        diagonal:layout_constraintHorizontal_bias="0.68"
        diagonal:layout_constraintStart_toStartOf="@+id/Friend"
        diagonal:layout_constraintTop_toTopOf="@+id/Friend"
        diagonal:layout_constraintVertical_bias="0.45" />

    <View
        android:id="@+id/massage"
        android:layout_width="@dimen/_35mdp"
        android:layout_height="@dimen/_35mdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/ic_3"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintStart_toEndOf="@+id/call"
        diagonal:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/view11"
        android:layout_width="@dimen/_20mdp"
        android:layout_height="@dimen/_20mdp"
        android:background="@drawable/ic_comment2"
        diagonal:layout_constraintBottom_toBottomOf="@+id/massage"
        diagonal:layout_constraintEnd_toEndOf="@+id/massage"
        diagonal:layout_constraintStart_toStartOf="@+id/massage"
        diagonal:layout_constraintTop_toTopOf="@+id/massage" />


    <View
        android:id="@+id/call"
        android:layout_width="@dimen/_35mdp"
        android:layout_height="@dimen/_35mdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_2"
        diagonal:layout_constraintEnd_toStartOf="@+id/massage"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintStart_toEndOf="@+id/Friend"
        diagonal:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/view10"
        android:layout_width="@dimen/_23mdp"
        android:layout_height="@dimen/_23mdp"
        android:background="@drawable/ic_call"
        diagonal:layout_constraintBottom_toBottomOf="@+id/call"
        diagonal:layout_constraintEnd_toEndOf="@+id/call"
        diagonal:layout_constraintStart_toStartOf="@+id/call"
        diagonal:layout_constraintTop_toTopOf="@+id/call" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toBottomOf="@+id/call">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Follower"
                android:textSize="@dimen/_14font_mdp"
                diagonal:layout_constraintEnd_toStartOf="@+id/view7"
                diagonal:layout_constraintHorizontal_bias="0.5"
                diagonal:layout_constraintStart_toStartOf="parent"
                diagonal:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="38948"
                android:textColor="@color/black"
                android:textSize="@dimen/_16font_mdp"
                diagonal:layout_constraintEnd_toEndOf="@+id/textView6"
                diagonal:layout_constraintStart_toStartOf="@+id/textView6"
                diagonal:layout_constraintTop_toBottomOf="@+id/textView6" />

            <View
                android:id="@+id/view7"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="#737070"
                diagonal:layout_constraintBottom_toBottomOf="parent"
                diagonal:layout_constraintEnd_toStartOf="@+id/textView5"
                diagonal:layout_constraintHorizontal_bias="0.5"
                diagonal:layout_constraintStart_toEndOf="@+id/textView6"
                diagonal:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Friends"
                android:textSize="@dimen/_14font_mdp"
                diagonal:layout_constraintEnd_toStartOf="@+id/view8"
                diagonal:layout_constraintHorizontal_bias="0.5"
                diagonal:layout_constraintStart_toEndOf="@+id/view7"
                diagonal:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="455"
                android:textColor="@color/black"
                android:textSize="@dimen/_16font_mdp"
                diagonal:layout_constraintEnd_toEndOf="@+id/textView5"
                diagonal:layout_constraintStart_toStartOf="@+id/textView5"
                diagonal:layout_constraintTop_toBottomOf="@+id/textView5" />

            <View
                android:id="@+id/view8"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="#737070"
                diagonal:layout_constraintBottom_toBottomOf="parent"
                diagonal:layout_constraintEnd_toStartOf="@+id/textView7"
                diagonal:layout_constraintHorizontal_bias="0.5"
                diagonal:layout_constraintStart_toEndOf="@+id/textView5"
                diagonal:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photos"
                android:textSize="@dimen/_14font_mdp"
                diagonal:layout_constraintEnd_toEndOf="parent"
                diagonal:layout_constraintHorizontal_bias="0.5"
                diagonal:layout_constraintStart_toEndOf="@+id/view8"
                diagonal:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="13"
                android:textColor="@color/black"
                android:textSize="@dimen/_16font_mdp"
                diagonal:layout_constraintEnd_toEndOf="@+id/textView7"
                diagonal:layout_constraintStart_toStartOf="@+id/textView7"
                diagonal:layout_constraintTop_toBottomOf="@+id/textView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="@dimen/_300mdp"
        android:layout_height="81dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
        diagonal:layout_constraintEnd_toEndOf="@+id/cardView"
        diagonal:layout_constraintHorizontal_bias="0.507"
        diagonal:layout_constraintStart_toStartOf="@+id/cardView"
        diagonal:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Friends"
        android:textStyle="bold"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintHorizontal_bias="0.027"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toBottomOf="@+id/textView12" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintHorizontal_bias="0.0"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toBottomOf="@+id/textView8" />


</androidx.constraintlayout.widget.ConstraintLayout>